@@ -105,7 +105,6 @@ import org.mockito.invocation.InvocationOnMock;
 import org.mockito.quality.Strictness;
 
 import java.lang.management.ManagementFactory;
-import java.util.Arrays;
 import java.util.Collection;
 import java.util.Collections;
 import java.util.HashMap;
@@ -330,7 +329,7 @@ public class WorkerTest {
         worker = new Worker(WORKER_ID, new MockTime(), plugins, config, offsetBackingStore, noneConnectorClientConfigOverridePolicy);
         worker.start();
 
-        assertEquals(Collections.emptySet(), worker.connectorNames());
+        assertEquals(Set.of(), worker.connectorNames());
 
         FutureCallback<TargetState> onFirstStart = new FutureCallback<>();
 
@@ -338,7 +337,7 @@ public class WorkerTest {
 
         // Wait for the connector to actually start
         assertEquals(TargetState.STARTED, onFirstStart.get(1000, TimeUnit.MILLISECONDS));
-        assertEquals(Collections.singleton(CONNECTOR_ID), worker.connectorNames());
+        assertEquals(Set.of(CONNECTOR_ID), worker.connectorNames());
 
 
         FutureCallback<TargetState> onSecondStart = new FutureCallback<>();
@@ -352,7 +351,7 @@ public class WorkerTest {
 
         assertStatistics(worker, 0, 0);
         assertStartupStatistics(worker, 1, 0, 0, 0);
-        assertEquals(Collections.emptySet(), worker.connectorNames());
+        assertEquals(Set.of(), worker.connectorNames());
 
         // Nothing should be left, so this should effectively be a nop
         worker.stop();
@@ -373,7 +372,7 @@ public class WorkerTest {
 
     private void mockFileConfigProvider() {
         MockFileConfigProvider mockFileConfigProvider = new MockFileConfigProvider();
-        mockFileConfigProvider.configure(Collections.singletonMap("testId", mockFileProviderTestId));
+        mockFileConfigProvider.configure(Map.of("testId", mockFileProviderTestId));
         when(plugins.newConfigProvider(any(AbstractConfig.class),
                                        eq("config.providers.file"),
                                        any(ClassLoaderUsage.class)))
@@ -409,7 +408,7 @@ public class WorkerTest {
         }
 
         assertStartupStatistics(worker, 1, 1, 0, 0);
-        assertEquals(Collections.emptySet(), worker.connectorNames());
+        assertEquals(Set.of(), worker.connectorNames());
 
         assertStatistics(worker, 0, 0);
         assertStartupStatistics(worker, 1, 1, 0, 0);
@@ -440,19 +439,19 @@ public class WorkerTest {
         worker.start();
 
         assertStatistics(worker, 0, 0);
-        assertEquals(Collections.emptySet(), worker.connectorNames());
+        assertEquals(Set.of(), worker.connectorNames());
         FutureCallback<TargetState> onStart = new FutureCallback<>();
         worker.startConnector(CONNECTOR_ID, connectorProps, ctx, connectorStatusListener, TargetState.STARTED, onStart);
         // Wait for the connector to actually start
         assertEquals(TargetState.STARTED, onStart.get(1000, TimeUnit.MILLISECONDS));
-        assertEquals(Collections.singleton(CONNECTOR_ID), worker.connectorNames());
+        assertEquals(Set.of(CONNECTOR_ID), worker.connectorNames());
         assertStatistics(worker, 1, 0);
         assertStartupStatistics(worker, 1, 0, 0, 0);
 
         worker.stopAndAwaitConnector(CONNECTOR_ID);
         assertStatistics(worker, 0, 0);
         assertStartupStatistics(worker, 1, 0, 0, 0);
-        assertEquals(Collections.emptySet(), worker.connectorNames());
+        assertEquals(Set.of(), worker.connectorNames());
         // Nothing should be left, so this should effectively be a nop
         worker.stop();
         assertStatistics(worker, 0, 0);
@@ -486,17 +485,17 @@ public class WorkerTest {
         worker.start();
 
         assertStatistics(worker, 0, 0);
-        assertEquals(Collections.emptySet(), worker.connectorNames());
+        assertEquals(Set.of(), worker.connectorNames());
         FutureCallback<TargetState> onStart = new FutureCallback<>();
         worker.startConnector(CONNECTOR_ID, connectorProps, ctx, connectorStatusListener, TargetState.STARTED, onStart);
         // Wait for the connector to actually start
         assertEquals(TargetState.STARTED, onStart.get(1000, TimeUnit.MILLISECONDS));
-        assertEquals(Collections.singleton(CONNECTOR_ID), worker.connectorNames());
+        assertEquals(Set.of(CONNECTOR_ID), worker.connectorNames());
         assertStatistics(worker, 1, 0);
 
         worker.stopAndAwaitConnector(CONNECTOR_ID);
         assertStatistics(worker, 0, 0);
-        assertEquals(Collections.emptySet(), worker.connectorNames());
+        assertEquals(Set.of(), worker.connectorNames());
         // Nothing should be left, so this should effectively be a nop
         worker.stop();
         assertStatistics(worker, 0, 0);
@@ -537,8 +536,8 @@ public class WorkerTest {
         mockVersionedConnectorIsolation(connectorClass, null, sinkConnector);
         mockExecutorRealSubmit(WorkerConnector.class);
 
-        Map<String, String> taskProps = Collections.singletonMap("foo", "bar");
-        when(sinkConnector.taskConfigs(2)).thenReturn(Arrays.asList(taskProps, taskProps));
+        Map<String, String> taskProps = Map.of("foo", "bar");
+        when(sinkConnector.taskConfigs(2)).thenReturn(List.of(taskProps, taskProps));
 
         // Use doReturn().when() syntax due to when().thenReturn() not being able to return wildcard generic types
         doReturn(TestSourceTask.class).when(sinkConnector).taskClass();
@@ -552,13 +551,13 @@ public class WorkerTest {
         worker.start();
 
         assertStatistics(worker, 0, 0);
-        assertEquals(Collections.emptySet(), worker.connectorNames());
+        assertEquals(Set.of(), worker.connectorNames());
         FutureCallback<TargetState> onFirstStart = new FutureCallback<>();
         worker.startConnector(CONNECTOR_ID, connectorProps, ctx, connectorStatusListener, TargetState.STARTED, onFirstStart);
         // Wait for the connector to actually start
         assertEquals(TargetState.STARTED, onFirstStart.get(1000, TimeUnit.MILLISECONDS));
         assertStatistics(worker, 1, 0);
-        assertEquals(Collections.singleton(CONNECTOR_ID), worker.connectorNames());
+        assertEquals(Set.of(CONNECTOR_ID), worker.connectorNames());
 
         FutureCallback<TargetState> onSecondStart = new FutureCallback<>();
         worker.startConnector(CONNECTOR_ID, connectorProps, ctx, connectorStatusListener, TargetState.STARTED, onSecondStart);
@@ -581,7 +580,7 @@ public class WorkerTest {
         worker.stopAndAwaitConnector(CONNECTOR_ID);
         assertStatistics(worker, 0, 0);
         assertStartupStatistics(worker, 1, 0, 0, 0);
-        assertEquals(Collections.emptySet(), worker.connectorNames());
+        assertEquals(Set.of(), worker.connectorNames());
         // Nothing should be left, so this should effectively be a nop
         worker.stop();
         assertStatistics(worker, 0, 0);
@@ -610,7 +609,7 @@ public class WorkerTest {
         mockVersionedTaskHeaderConverterFromConnector(taskHeaderConverter);
         mockExecutorFakeSubmit(WorkerTask.class);
 
-        Map<String, String> origProps = Collections.singletonMap(TaskConfig.TASK_CLASS_CONFIG, TestSourceTask.class.getName());
+        Map<String, String> origProps = Map.of(TaskConfig.TASK_CLASS_CONFIG, TestSourceTask.class.getName());
 
         worker = new Worker(WORKER_ID, new MockTime(), plugins, config, offsetBackingStore, executorService,
                 noneConnectorClientConfigOverridePolicy, null);
@@ -618,28 +617,28 @@ public class WorkerTest {
         worker.start();
 
         assertStatistics(worker, 0, 0);
-        assertEquals(Collections.emptySet(), worker.taskIds());
+        assertEquals(Set.of(), worker.taskIds());
 
         Map<String, String> connectorConfigs = anyConnectorConfigMap();
         ClusterConfigState configState = new ClusterConfigState(
                 0,
                 null,
-                Collections.singletonMap(CONNECTOR_ID, 1),
-                Collections.singletonMap(CONNECTOR_ID, connectorConfigs),
-                Collections.singletonMap(CONNECTOR_ID, TargetState.STARTED),
-                Collections.singletonMap(TASK_ID, origProps),
-                Collections.emptyMap(),
-                Collections.emptyMap(),
-                Collections.singletonMap(CONNECTOR_ID, new AppliedConnectorConfig(connectorConfigs)),
-                Collections.emptySet(),
-                Collections.emptySet()
+                Map.of(CONNECTOR_ID, 1),
+                Map.of(CONNECTOR_ID, connectorConfigs),
+                Map.of(CONNECTOR_ID, TargetState.STARTED),
+                Map.of(TASK_ID, origProps),
+                Map.of(),
+                Map.of(),
+                Map.of(CONNECTOR_ID, new AppliedConnectorConfig(connectorConfigs)),
+                Set.of(),
+                Set.of()
         );
         assertTrue(worker.startSourceTask(TASK_ID, configState, connectorConfigs, origProps, taskStatusListener, TargetState.STARTED));
         assertStatistics(worker, 0, 1);
-        assertEquals(Collections.singleton(TASK_ID), worker.taskIds());
+        assertEquals(Set.of(TASK_ID), worker.taskIds());
         worker.stopAndAwaitTask(TASK_ID);
         assertStatistics(worker, 0, 0);
-        assertEquals(Collections.emptySet(), worker.taskIds());
+        assertEquals(Set.of(), worker.taskIds());
         // Nothing should be left, so this should effectively be a nop
         worker.stop();
         assertStatistics(worker, 0, 0);
@@ -666,7 +665,7 @@ public class WorkerTest {
         mockVersionedTaskHeaderConverterFromConnector(taskHeaderConverter);
         mockExecutorFakeSubmit(WorkerTask.class);
 
-        Map<String, String> origProps = Collections.singletonMap(TaskConfig.TASK_CLASS_CONFIG, TestSinkTask.class.getName());
+        Map<String, String> origProps = Map.of(TaskConfig.TASK_CLASS_CONFIG, TestSinkTask.class.getName());
 
         worker = new Worker(WORKER_ID, new MockTime(), plugins, config, offsetBackingStore, executorService,
                 noneConnectorClientConfigOverridePolicy, null);
@@ -674,7 +673,7 @@ public class WorkerTest {
         worker.start();
 
         assertStatistics(worker, 0, 0);
-        assertEquals(Collections.emptySet(), worker.taskIds());
+        assertEquals(Set.of(), worker.taskIds());
         Map<String, String> connectorConfigs = anyConnectorConfigMap();
         connectorConfigs.put(TOPICS_CONFIG, "t1");
         connectorConfigs.put(CONNECTOR_CLASS_CONFIG, SampleSinkConnector.class.getName());
@@ -682,22 +681,22 @@ public class WorkerTest {
         ClusterConfigState configState = new ClusterConfigState(
                 0,
                 null,
-                Collections.singletonMap(CONNECTOR_ID, 1),
-                Collections.singletonMap(CONNECTOR_ID, connectorConfigs),
-                Collections.singletonMap(CONNECTOR_ID, TargetState.STARTED),
-                Collections.singletonMap(TASK_ID, origProps),
-                Collections.emptyMap(),
-                Collections.emptyMap(),
-                Collections.singletonMap(CONNECTOR_ID, new AppliedConnectorConfig(connectorConfigs)),
-                Collections.emptySet(),
-                Collections.emptySet()
+                Map.of(CONNECTOR_ID, 1),
+                Map.of(CONNECTOR_ID, connectorConfigs),
+                Map.of(CONNECTOR_ID, TargetState.STARTED),
+                Map.of(TASK_ID, origProps),
+                Map.of(),
+                Map.of(),
+                Map.of(CONNECTOR_ID, new AppliedConnectorConfig(connectorConfigs)),
+                Set.of(),
+                Set.of()
         );
         assertTrue(worker.startSinkTask(TASK_ID, configState, connectorConfigs, origProps, taskStatusListener, TargetState.STARTED));
         assertStatistics(worker, 0, 1);
-        assertEquals(Collections.singleton(TASK_ID), worker.taskIds());
+        assertEquals(Set.of(TASK_ID), worker.taskIds());
         worker.stopAndAwaitTask(TASK_ID);
         assertStatistics(worker, 0, 0);
-        assertEquals(Collections.emptySet(), worker.taskIds());
+        assertEquals(Set.of(), worker.taskIds());
         // Nothing should be left, so this should effectively be a nop
         worker.stop();
         assertStatistics(worker, 0, 0);
@@ -741,7 +740,7 @@ public class WorkerTest {
         Runnable preProducer = mock(Runnable.class);
         Runnable postProducer = mock(Runnable.class);
 
-        Map<String, String> origProps = Collections.singletonMap(TaskConfig.TASK_CLASS_CONFIG, TestSourceTask.class.getName());
+        Map<String, String> origProps = Map.of(TaskConfig.TASK_CLASS_CONFIG, TestSourceTask.class.getName());
 
         worker = new Worker(WORKER_ID, new MockTime(), plugins, config, offsetBackingStore, executorService,
                 noneConnectorClientConfigOverridePolicy, null);
@@ -749,29 +748,29 @@ public class WorkerTest {
         worker.start();
 
         assertStatistics(worker, 0, 0);
-        assertEquals(Collections.emptySet(), worker.taskIds());
+        assertEquals(Set.of(), worker.taskIds());
 
         Map<String, String> connectorConfigs = anyConnectorConfigMap();
         ClusterConfigState configState = new ClusterConfigState(
                 0,
                 null,
-                Collections.singletonMap(CONNECTOR_ID, 1),
-                Collections.singletonMap(CONNECTOR_ID, connectorConfigs),
-                Collections.singletonMap(CONNECTOR_ID, TargetState.STARTED),
-                Collections.singletonMap(TASK_ID, origProps),
-                Collections.emptyMap(),
-                Collections.emptyMap(),
-                Collections.singletonMap(CONNECTOR_ID, new AppliedConnectorConfig(connectorConfigs)),
-                Collections.emptySet(),
-                Collections.emptySet()
+                Map.of(CONNECTOR_ID, 1),
+                Map.of(CONNECTOR_ID, connectorConfigs),
+                Map.of(CONNECTOR_ID, TargetState.STARTED),
+                Map.of(TASK_ID, origProps),
+                Map.of(),
+                Map.of(),
+                Map.of(CONNECTOR_ID, new AppliedConnectorConfig(connectorConfigs)),
+                Set.of(),
+                Set.of()
         );
 
         assertTrue(worker.startExactlyOnceSourceTask(TASK_ID, configState,  connectorConfigs, origProps, taskStatusListener, TargetState.STARTED, preProducer, postProducer));
         assertStatistics(worker, 0, 1);
-        assertEquals(Collections.singleton(TASK_ID), worker.taskIds());
+        assertEquals(Set.of(TASK_ID), worker.taskIds());
         worker.stopAndAwaitTask(TASK_ID);
         assertStatistics(worker, 0, 0);
-        assertEquals(Collections.emptySet(), worker.taskIds());
+        assertEquals(Set.of(), worker.taskIds());
         // Nothing should be left, so this should effectively be a nop
         worker.stop();
         assertStatistics(worker, 0, 0);
@@ -792,7 +791,7 @@ public class WorkerTest {
         mockStorage();
         mockFileConfigProvider();
 
-        Map<String, String> origProps = Collections.singletonMap(TaskConfig.TASK_CLASS_CONFIG, TestSourceTask.class.getName());
+        Map<String, String> origProps = Map.of(TaskConfig.TASK_CLASS_CONFIG, TestSourceTask.class.getName());
 
         TaskConfig taskConfig = new TaskConfig(origProps);
 
@@ -827,7 +826,7 @@ public class WorkerTest {
         worker.start();
         assertStatistics(worker, 0, 0);
         assertStartupStatistics(worker, 0, 0, 0, 0);
-        assertEquals(Collections.emptySet(), worker.taskIds());
+        assertEquals(Set.of(), worker.taskIds());
         worker.startSourceTask(
             TASK_ID,
             ClusterConfigState.EMPTY,
@@ -905,7 +904,7 @@ public class WorkerTest {
         mockInternalConverters();
         mockFileConfigProvider();
 
-        Map<String, String> origProps = Collections.singletonMap(TaskConfig.TASK_CLASS_CONFIG, "missing.From.This.Workers.Classpath");
+        Map<String, String> origProps = Map.of(TaskConfig.TASK_CLASS_CONFIG, "missing.From.This.Workers.Classpath");
 
         mockKafkaClusterId();
         mockGenericIsolation();
@@ -922,7 +921,7 @@ public class WorkerTest {
 
         assertStatistics(worker, 0, 0);
         assertStartupStatistics(worker, 0, 0, 1, 1);
-        assertEquals(Collections.emptySet(), worker.taskIds());
+        assertEquals(Set.of(), worker.taskIds());
 
         verify(taskStatusListener).onFailure(eq(TASK_ID), any(ConfigException.class));
         verifyKafkaClusterId();
@@ -948,7 +947,7 @@ public class WorkerTest {
         mockVersionedTaskHeaderConverterFromWorker(taskHeaderConverter);
         mockExecutorFakeSubmit(WorkerTask.class);
 
-        Map<String, String> origProps = Collections.singletonMap(TaskConfig.TASK_CLASS_CONFIG, TestSourceTask.class.getName());
+        Map<String, String> origProps = Map.of(TaskConfig.TASK_CLASS_CONFIG, TestSourceTask.class.getName());
 
         TaskConfig taskConfig = new TaskConfig(origProps);
 
@@ -990,7 +989,7 @@ public class WorkerTest {
         mockStorage();
         mockFileConfigProvider();
 
-        Map<String, String> origProps = Collections.singletonMap(TaskConfig.TASK_CLASS_CONFIG, TestSourceTask.class.getName());
+        Map<String, String> origProps = Map.of(TaskConfig.TASK_CLASS_CONFIG, TestSourceTask.class.getName());
         TaskConfig taskConfig = new TaskConfig(origProps);
 
         mockKafkaClusterId();
@@ -1009,16 +1008,16 @@ public class WorkerTest {
         worker.herder = herder;
         worker.start();
         assertStatistics(worker, 0, 0);
-        assertEquals(Collections.emptySet(), worker.taskIds());
+        assertEquals(Set.of(), worker.taskIds());
         Map<String, String> connProps = anyConnectorConfigMap();
         connProps.put(ConnectorConfig.KEY_CONVERTER_CLASS_CONFIG, SampleConverterWithHeaders.class.getName());
         connProps.put(ConnectorConfig.VALUE_CONVERTER_CLASS_CONFIG, SampleConverterWithHeaders.class.getName());
         worker.startSourceTask(TASK_ID, ClusterConfigState.EMPTY, connProps, origProps, taskStatusListener, TargetState.STARTED);
         assertStatistics(worker, 0, 1);
-        assertEquals(Collections.singleton(TASK_ID), worker.taskIds());
+        assertEquals(Set.of(TASK_ID), worker.taskIds());
         worker.stopAndAwaitTask(TASK_ID);
         assertStatistics(worker, 0, 0);
-        assertEquals(Collections.emptySet(), worker.taskIds());
+        assertEquals(Set.of(), worker.taskIds());
         // Nothing should be left, so this should effectively be a nop
         worker.stop();
         assertStatistics(worker, 0, 0);
@@ -1206,7 +1205,7 @@ public class WorkerTest {
         props.put("consumer.bootstrap.servers", "localhost:4761");
         WorkerConfig configWithOverrides = new StandaloneConfig(props);
 
-        Map<String, Object> connConfig = Collections.singletonMap("metadata.max.age.ms", "10000");
+        Map<String, Object> connConfig = Map.of("metadata.max.age.ms", "10000");
         Map<String, String> expectedConfigs = new HashMap<>(workerProps);
         expectedConfigs.remove(AbstractConfig.CONFIG_PROVIDERS_CONFIG);
         expectedConfigs.put("bootstrap.servers", "localhost:9092");
@@ -1231,7 +1230,7 @@ public class WorkerTest {
         props.put("admin.client.id", "testid");
         props.put("admin.metadata.max.age.ms", "5000");
         WorkerConfig configWithOverrides = new StandaloneConfig(props);
-        Map<String, Object> connConfig = Collections.singletonMap("metadata.max.age.ms", "10000");
+        Map<String, Object> connConfig = Map.of("metadata.max.age.ms", "10000");
 
         when(connectorConfig.originalsWithPrefix(CONNECTOR_CLIENT_ADMIN_OVERRIDES_PREFIX)).thenReturn(connConfig);
 
@@ -1817,7 +1816,7 @@ public class WorkerTest {
                             noneConnectorClientConfigOverridePolicy, null);
         worker.start();
 
-        assertEquals(Collections.emptySet(), worker.connectorNames());
+        assertEquals(Set.of(), worker.connectorNames());
         worker.stop();
         verifyKafkaClusterId();
         verify(executorService, times(1)).shutdown();
@@ -1839,7 +1838,7 @@ public class WorkerTest {
                             noneConnectorClientConfigOverridePolicy, null);
         worker.start();
 
-        assertEquals(Collections.emptySet(), worker.connectorNames());
+        assertEquals(Set.of(), worker.connectorNames());
         worker.stop();
         verifyKafkaClusterId();
         verify(executorService, times(1)).shutdown();
@@ -1862,7 +1861,7 @@ public class WorkerTest {
                             noneConnectorClientConfigOverridePolicy, null);
         worker.start();
 
-        assertEquals(Collections.emptySet(), worker.connectorNames());
+        assertEquals(Set.of(), worker.connectorNames());
         worker.stop();
         // Clear the interrupted status so that the test infrastructure doesn't hit an unexpected interrupt.
         assertTrue(Thread.interrupted());
@@ -1931,7 +1930,7 @@ public class WorkerTest {
         worker = new Worker(WORKER_ID, new MockTime(), plugins, config, offsetBackingStore, executorService,
                 allConnectorClientConfigOverridePolicy, config -> admin);
         worker.start();
-        mockAdminListConsumerGroupOffsets(admin, Collections.singletonMap(new TopicPartition("test-topic", 0), new OffsetAndMetadata(10)), null);
+        mockAdminListConsumerGroupOffsets(admin, Map.of(new TopicPartition("test-topic", 0), new OffsetAndMetadata(10)), null);
 
         FutureCallback<ConnectorOffsets> cb = new FutureCallback<>();
         worker.sinkConnectorOffsets(CONNECTOR_ID, sinkConnector, connectorProps, cb);
@@ -2038,11 +2037,11 @@ public class WorkerTest {
         worker.start();
 
         Set<Map<String, Object>> connectorPartitions =
-                Collections.singleton(Collections.singletonMap("partitionKey", "partitionValue"));
+                Set.of(Map.of("partitionKey", "partitionValue"));
 
-        Map<Map<String, Object>, Map<String, Object>> partitionOffsets = Collections.singletonMap(
-                Collections.singletonMap("partitionKey", "partitionValue"),
-                Collections.singletonMap("offsetKey", "offsetValue")
+        Map<Map<String, Object>, Map<String, Object>> partitionOffsets = Map.of(
+                Map.of("partitionKey", "partitionValue"),
+                Map.of("offsetKey", "offsetValue")
         );
 
         when(offsetStore.connectorPartitions(CONNECTOR_ID)).thenReturn(connectorPartitions);
@@ -2112,7 +2111,7 @@ public class WorkerTest {
 
         FutureCallback<Message> cb = new FutureCallback<>();
         worker.modifyConnectorOffsets(CONNECTOR_ID, connectorProps,
-                Collections.singletonMap(Collections.singletonMap("partitionKey", "partitionValue"), Collections.singletonMap("offsetKey", "offsetValue")),
+                Map.of(Map.of("partitionKey", "partitionValue"), Map.of("offsetKey", "offsetValue")),
                 cb);
 
         ExecutionException e = assertThrows(ExecutionException.class, () -> cb.get(1000, TimeUnit.MILLISECONDS));
@@ -2142,8 +2141,8 @@ public class WorkerTest {
         OffsetStorageWriter offsetWriter = mock(OffsetStorageWriter.class);
 
         Map<Map<String, ?>, Map<String, ?>> partitionOffsets = new HashMap<>();
-        partitionOffsets.put(Collections.singletonMap("partitionKey", "partitionValue"), Collections.singletonMap("offsetKey", "offsetValue"));
-        partitionOffsets.put(Collections.singletonMap("partitionKey", "partitionValue2"), Collections.singletonMap("offsetKey", "offsetValue"));
+        partitionOffsets.put(Map.of("partitionKey", "partitionValue"), Map.of("offsetKey", "offsetValue"));
+        partitionOffsets.put(Map.of("partitionKey", "partitionValue2"), Map.of("offsetKey", "offsetValue"));
 
         when(offsetWriter.doFlush(any())).thenAnswer(invocation -> {
             invocation.getArgument(0, Callback.class).onCompletion(null, null);
@@ -2181,8 +2180,8 @@ public class WorkerTest {
         OffsetStorageWriter offsetWriter = mock(OffsetStorageWriter.class);
 
         Map<Map<String, ?>, Map<String, ?>> partitionOffsets = new HashMap<>();
-        partitionOffsets.put(Collections.singletonMap("partitionKey", "partitionValue"), Collections.singletonMap("offsetKey", "offsetValue"));
-        partitionOffsets.put(Collections.singletonMap("partitionKey", "partitionValue2"), Collections.singletonMap("offsetKey", "offsetValue"));
+        partitionOffsets.put(Map.of("partitionKey", "partitionValue"), Map.of("offsetKey", "offsetValue"));
+        partitionOffsets.put(Map.of("partitionKey", "partitionValue2"), Map.of("offsetKey", "offsetValue"));
 
         when(offsetWriter.doFlush(any())).thenAnswer(invocation -> {
             invocation.getArgument(0, Callback.class).onCompletion(new RuntimeException("Test exception"), null);
@@ -2207,9 +2206,9 @@ public class WorkerTest {
     @ValueSource(booleans = {true, false})
     public void testNormalizeSourceConnectorOffsets(boolean enableTopicCreation) {
         setup(enableTopicCreation);
-        Map<Map<String, ?>, Map<String, ?>> offsets = Collections.singletonMap(
-                Collections.singletonMap("filename", "/path/to/filename"),
-                Collections.singletonMap("position", 20)
+        Map<Map<String, ?>, Map<String, ?>> offsets = Map.of(
+                Map.of("filename", "/path/to/filename"),
+                Map.of("position", 20)
         );
 
         assertInstanceOf(Integer.class, offsets.values().iterator().next().get("position"));
@@ -2237,11 +2236,11 @@ public class WorkerTest {
         Map<String, String> partition1 = new HashMap<>();
         partition1.put(SinkUtils.KAFKA_TOPIC_KEY, "test_topic");
         partition1.put(SinkUtils.KAFKA_PARTITION_KEY, "10");
-        partitionOffsets.put(partition1, Collections.singletonMap(SinkUtils.KAFKA_OFFSET_KEY, 500));
+        partitionOffsets.put(partition1, Map.of(SinkUtils.KAFKA_OFFSET_KEY, 500));
         Map<String, String> partition2 = new HashMap<>();
         partition2.put(SinkUtils.KAFKA_TOPIC_KEY, "test_topic");
         partition2.put(SinkUtils.KAFKA_PARTITION_KEY, "20");
-        partitionOffsets.put(partition2, Collections.singletonMap(SinkUtils.KAFKA_OFFSET_KEY, 100));
+        partitionOffsets.put(partition2, Map.of(SinkUtils.KAFKA_OFFSET_KEY, 100));
 
         // A null value for deleteOffsetsSetCapture indicates that we don't expect any call to Admin::deleteConsumerGroupOffsets
         alterOffsetsSinkConnector(partitionOffsets, alterOffsetsMapCapture, null);
@@ -2290,7 +2289,7 @@ public class WorkerTest {
         Map<String, String> partition1 = new HashMap<>();
         partition1.put(SinkUtils.KAFKA_TOPIC_KEY, "test_topic");
         partition1.put(SinkUtils.KAFKA_PARTITION_KEY, "10");
-        partitionOffsets.put(partition1, Collections.singletonMap(SinkUtils.KAFKA_OFFSET_KEY, "100"));
+        partitionOffsets.put(partition1, Map.of(SinkUtils.KAFKA_OFFSET_KEY, "100"));
         Map<String, String> partition2 = new HashMap<>();
         partition2.put(SinkUtils.KAFKA_TOPIC_KEY, "test_topic");
         partition2.put(SinkUtils.KAFKA_PARTITION_KEY, "20");
@@ -2301,7 +2300,7 @@ public class WorkerTest {
         assertEquals(1, alterOffsetsMapCapture.getValue().size());
         assertEquals(100, alterOffsetsMapCapture.getValue().get(new TopicPartition("test_topic", 10)).offset());
 
-        Set<TopicPartition> expectedTopicPartitionsForOffsetDelete = Collections.singleton(new TopicPartition("test_topic", 20));
+        Set<TopicPartition> expectedTopicPartitionsForOffsetDelete = Set.of(new TopicPartition("test_topic", 20));
         assertEquals(expectedTopicPartitionsForOffsetDelete, deleteOffsetsSetCapture.getValue());
     }
 
@@ -2375,8 +2374,8 @@ public class WorkerTest {
         Map<String, String> partition1 = new HashMap<>();
         partition1.put(SinkUtils.KAFKA_TOPIC_KEY, "test_topic");
         partition1.put(SinkUtils.KAFKA_PARTITION_KEY, "10");
-        Map<Map<String, ?>, Map<String, ?>> partitionOffsets = Collections.singletonMap(partition1,
-                Collections.singletonMap(SinkUtils.KAFKA_OFFSET_KEY, "100"));
+        Map<Map<String, ?>, Map<String, ?>> partitionOffsets = Map.of(partition1,
+                Map.of(SinkUtils.KAFKA_OFFSET_KEY, "100"));
 
         FutureCallback<Message> cb = new FutureCallback<>();
         worker.modifySinkConnectorOffsets(CONNECTOR_ID, sinkConnector, connectorProps, partitionOffsets,
@@ -2423,7 +2422,7 @@ public class WorkerTest {
         Map<String, String> partition1 = new HashMap<>();
         partition1.put(SinkUtils.KAFKA_TOPIC_KEY, "test_topic");
         partition1.put(SinkUtils.KAFKA_PARTITION_KEY, "10");
-        partitionOffsets.put(partition1, Collections.singletonMap(SinkUtils.KAFKA_OFFSET_KEY, "100"));
+        partitionOffsets.put(partition1, Map.of(SinkUtils.KAFKA_OFFSET_KEY, "100"));
         Map<String, String> partition2 = new HashMap<>();
         partition2.put(SinkUtils.KAFKA_TOPIC_KEY, "test_topic");
         partition2.put(SinkUtils.KAFKA_PARTITION_KEY, "20");
@@ -2464,7 +2463,7 @@ public class WorkerTest {
         Map<String, String> partition1 = new HashMap<>();
         partition1.put(SinkUtils.KAFKA_TOPIC_KEY, "test_topic");
         partition1.put(SinkUtils.KAFKA_PARTITION_KEY, "10");
-        partitionOffsets.put(partition1, Collections.singletonMap(SinkUtils.KAFKA_OFFSET_KEY, "100"));
+        partitionOffsets.put(partition1, Map.of(SinkUtils.KAFKA_OFFSET_KEY, "100"));
 
         FutureCallback<Message> cb = new FutureCallback<>();
         worker.modifySinkConnectorOffsets(CONNECTOR_ID, sinkConnector, connectorProps, partitionOffsets,
@@ -2504,8 +2503,8 @@ public class WorkerTest {
         OffsetStorageWriter offsetWriter = mock(OffsetStorageWriter.class);
 
         Set<Map<String, Object>> connectorPartitions = new HashSet<>();
-        connectorPartitions.add(Collections.singletonMap("partitionKey", "partitionValue1"));
-        connectorPartitions.add(Collections.singletonMap("partitionKey", "partitionValue2"));
+        connectorPartitions.add(Map.of("partitionKey", "partitionValue1"));
+        connectorPartitions.add(Map.of("partitionKey", "partitionValue2"));
         when(offsetStore.connectorPartitions(eq(CONNECTOR_ID))).thenReturn(connectorPartitions);
         when(offsetWriter.doFlush(any())).thenAnswer(invocation -> {
             invocation.getArgument(0, Callback.class).onCompletion(null, null);
@@ -2546,7 +2545,7 @@ public class WorkerTest {
         when(plugins.withClassLoader(any(ClassLoader.class), any(Runnable.class))).thenAnswer(AdditionalAnswers.returnsSecondArg());
 
         TopicPartition tp = new TopicPartition("test-topic", 0);
-        mockAdminListConsumerGroupOffsets(admin, Collections.singletonMap(tp, new OffsetAndMetadata(10L)), null, time, 2000);
+        mockAdminListConsumerGroupOffsets(admin, Map.of(tp, new OffsetAndMetadata(10L)), null, time, 2000);
         when(sinkConnector.alterOffsets(eq(connectorProps), eq(Collections.singletonMap(tp, null)))).thenAnswer(invocation -> {
             time.sleep(3000);
             return true;
@@ -2588,7 +2587,7 @@ public class WorkerTest {
         when(plugins.withClassLoader(any(ClassLoader.class), any(Runnable.class))).thenAnswer(AdditionalAnswers.returnsSecondArg());
 
         TopicPartition tp = new TopicPartition("test-topic", 0);
-        mockAdminListConsumerGroupOffsets(admin, Collections.singletonMap(tp, new OffsetAndMetadata(10L)), null);
+        mockAdminListConsumerGroupOffsets(admin, Map.of(tp, new OffsetAndMetadata(10L)), null);
         when(sinkConnector.alterOffsets(eq(connectorProps), eq(Collections.singletonMap(tp, null)))).thenReturn(true);
 
         DeleteConsumerGroupsResult deleteConsumerGroupsResult = mock(DeleteConsumerGroupsResult.class);
@@ -2629,9 +2628,9 @@ public class WorkerTest {
         KafkaProducer<byte[], byte[]> producer = mock(KafkaProducer.class);
         OffsetStorageWriter offsetWriter = mock(OffsetStorageWriter.class);
 
-        Map<Map<String, ?>, Map<String, ?>> partitionOffsets = Collections.singletonMap(
-                Collections.singletonMap("partitionKey", "partitionValue"),
-                Collections.singletonMap("offsetKey", "offsetValue"));
+        Map<Map<String, ?>, Map<String, ?>> partitionOffsets = Map.of(
+                Map.of("partitionKey", "partitionValue"),
+                Map.of("offsetKey", "offsetValue"));
 
         FutureCallback<Message> cb = new FutureCallback<>();
         worker.modifySourceConnectorOffsets(CONNECTOR_ID, sourceConnector, connectorProps, partitionOffsets, offsetStore, producer,
@@ -2715,7 +2714,7 @@ public class WorkerTest {
         Map<String, String> taskConfig = new HashMap<>();
 
         // No warnings or exceptions when a connector generates an empty list of task configs
-        when(sourceConnector.taskConfigs(1)).thenReturn(Collections.emptyList());
+        when(sourceConnector.taskConfigs(1)).thenReturn(List.of());
         try (LogCaptureAppender logCaptureAppender = LogCaptureAppender.createAndRegister(Worker.class)) {
             connectorProps.put(TASKS_MAX_CONFIG, "1");
             List<Map<String, String>> taskConfigs = worker.connectorTaskConfigs(CONNECTOR_ID, new ConnectorConfig(plugins, connectorProps));
@@ -2724,9 +2723,9 @@ public class WorkerTest {
         }
 
         // No warnings or exceptions when a connector generates the maximum permitted number of task configs
-        when(sourceConnector.taskConfigs(1)).thenReturn(Collections.singletonList(taskConfig));
-        when(sourceConnector.taskConfigs(2)).thenReturn(Arrays.asList(taskConfig, taskConfig));
-        when(sourceConnector.taskConfigs(3)).thenReturn(Arrays.asList(taskConfig, taskConfig, taskConfig));
+        when(sourceConnector.taskConfigs(1)).thenReturn(List.of(taskConfig));
+        when(sourceConnector.taskConfigs(2)).thenReturn(List.of(taskConfig, taskConfig));
+        when(sourceConnector.taskConfigs(3)).thenReturn(List.of(taskConfig, taskConfig, taskConfig));
         try (LogCaptureAppender logCaptureAppender = LogCaptureAppender.createAndRegister(Worker.class)) {
             connectorProps.put(TASKS_MAX_CONFIG, "1");
             List<Map<String, String>> taskConfigs = worker.connectorTaskConfigs(CONNECTOR_ID, new ConnectorConfig(plugins, connectorProps));
@@ -2740,12 +2739,12 @@ public class WorkerTest {
             taskConfigs = worker.connectorTaskConfigs(CONNECTOR_ID, new ConnectorConfig(plugins, connectorProps));
             assertEquals(3, taskConfigs.size());
 
-            assertEquals(Collections.emptyList(), logCaptureAppender.getMessages("WARN"));
-            assertEquals(Collections.emptyList(), logCaptureAppender.getMessages("ERROR"));
+            assertEquals(List.of(), logCaptureAppender.getMessages("WARN"));
+            assertEquals(List.of(), logCaptureAppender.getMessages("ERROR"));
         }
 
         // Warning/exception when a connector generates too many task configs
-        List<Map<String, String>> tooManyTaskConfigs = Arrays.asList(taskConfig, taskConfig, taskConfig, taskConfig);
+        List<Map<String, String>> tooManyTaskConfigs = List.of(taskConfig, taskConfig, taskConfig, taskConfig);
         when(sourceConnector.taskConfigs(1)).thenReturn(tooManyTaskConfigs);
         when(sourceConnector.taskConfigs(2)).thenReturn(tooManyTaskConfigs);
         when(sourceConnector.taskConfigs(3)).thenReturn(tooManyTaskConfigs);
@@ -2780,19 +2779,19 @@ public class WorkerTest {
                 );
 
                 // Regardless of enforcement, there should never be any error-level log messages
-                assertEquals(Collections.emptyList(), logCaptureAppender.getMessages("ERROR"));
+                assertEquals(List.of(), logCaptureAppender.getMessages("ERROR"));
             }
         }
 
         // One last sanity check in case the connector is reconfigured and respects tasks.max
-        when(sourceConnector.taskConfigs(1)).thenReturn(Collections.singletonList(taskConfig));
+        when(sourceConnector.taskConfigs(1)).thenReturn(List.of(taskConfig));
         try (LogCaptureAppender logCaptureAppender = LogCaptureAppender.createAndRegister(Worker.class)) {
             connectorProps.put(TASKS_MAX_CONFIG, "1");
             List<Map<String, String>> taskConfigs = worker.connectorTaskConfigs(CONNECTOR_ID, new ConnectorConfig(plugins, connectorProps));
             assertEquals(1, taskConfigs.size());
 
-            assertEquals(Collections.emptyList(), logCaptureAppender.getMessages("WARN"));
-            assertEquals(Collections.emptyList(), logCaptureAppender.getMessages("ERROR"));
+            assertEquals(List.of(), logCaptureAppender.getMessages("WARN"));
+            assertEquals(List.of(), logCaptureAppender.getMessages("ERROR"));
         }
 
         worker.stop();
@@ -2816,7 +2815,7 @@ public class WorkerTest {
         SinkTask task = mock(TestSinkTask.class);
         mockKafkaClusterId();
 
-        Map<String, String> origProps = Collections.singletonMap(TaskConfig.TASK_CLASS_CONFIG, TestSinkTask.class.getName());
+        Map<String, String> origProps = Map.of(TaskConfig.TASK_CLASS_CONFIG, TestSinkTask.class.getName());
 
         worker = new Worker(WORKER_ID, new MockTime(), plugins, config, offsetBackingStore, executorService,
                 noneConnectorClientConfigOverridePolicy, null);
@@ -2824,7 +2823,7 @@ public class WorkerTest {
         worker.start();
 
         assertStatistics(worker, 0, 0);
-        assertEquals(Collections.emptySet(), worker.taskIds());
+        assertEquals(Set.of(), worker.taskIds());
         Map<String, String> connectorConfigs = anyConnectorConfigMap();
         connectorConfigs.put(TASKS_MAX_ENFORCE_CONFIG, Boolean.toString(enforced));
         connectorConfigs.put(TOPICS_CONFIG, "t1");
@@ -2839,15 +2838,15 @@ public class WorkerTest {
                 0,
                 null,
                 // ... but it has generated two task configs
-                Collections.singletonMap(connName, numTasks),
-                Collections.singletonMap(connName, connectorConfigs),
-                Collections.singletonMap(connName, TargetState.STARTED),
-                Collections.singletonMap(TASK_ID, origProps),
-                Collections.emptyMap(),
-                Collections.emptyMap(),
-                Collections.singletonMap(connName, new AppliedConnectorConfig(connectorConfigs)),
-                Collections.emptySet(),
-                Collections.emptySet()
+                Map.of(connName, numTasks),
+                Map.of(connName, connectorConfigs),
+                Map.of(connName, TargetState.STARTED),
+                Map.of(TASK_ID, origProps),
+                Map.of(),
+                Map.of(),
+                Map.of(connName, new AppliedConnectorConfig(connectorConfigs)),
+                Set.of(),
+                Set.of()
         );
 
         String tasksMaxExceededMessage;
@@ -2963,7 +2962,7 @@ public class WorkerTest {
 
     private void mockInternalConverters() {
         JsonConverter jsonConverter = new JsonConverter();
-        jsonConverter.configure(Collections.singletonMap(SCHEMAS_ENABLE_CONFIG, false), false);
+        jsonConverter.configure(Map.of(SCHEMAS_ENABLE_CONFIG, false), false);
 
         when(plugins.newInternalConverter(eq(true), anyString(), anyMap()))
                        .thenReturn(jsonConverter);
